--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,13 +1,41 @@
 input {
-	tcp {
-		port => 5000
-	}
+    file {
+        type => "apache_access"
+        path => "/tmp/log/apache.log"
+    }
+
+    beats {
+        port => 5044
+        client_inactivity_timeout => 600
+    }
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+    if [type] == "apache_access" or "envoy-access-log" in [tags] {
+        grok {
+            match => { "message" => '\[%{TIMESTAMP_ISO8601:timestamp}\] \"%{DATA:method} (?:%{URIPATH:uri_path}(?:%{URIPARAM:uri_param})?|%{DATA:}) %{DATA:protocol}\" %{NUMBER:status_code} %{DATA:response_flags} %{NUMBER:bytes_sent} %{NUMBER:bytes_received} %{NUMBER:duration} (?:%{NUMBER:upstream_service_time}|%{DATA:tcp_service_time}) \"%{DATA:forwarded_for}\" \"%{DATA:user_agent}\" \"%{DATA:request_id}\" \"%{DATA:authority}\" \"%{DATA:upstream_service}\"'}
+        }
+
+        mutate {
+            convert => {"duration" => "integer"}
+        }
+    }
+}
 
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-	}
+    if [type] == "apache_access" {
+        elasticsearch {
+            hosts => "elasticsearch:9200"
+            index => "envoy-access-log-%{+YYYY.MM.dd}"
+        }
+        stdout { codec => rubydebug }
+    }
+
+    else if "envoy-access-log" in [tags] {
+        elasticsearch {
+            hosts => "elasticsearch:9200"
+            index => "beats-envoy-access-log-%{+YYYY.MM.dd}"
+        }
+        stdout { codec => rubydebug }   
+    }
 }
